--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Site de doces da Tia Vera",
   "main": "index.html",
   "scripts": {
-    "watch": "node ./node_modules/gulp/bin/gulp.js watch"
+    "build": "node ./node_modules/gulp/bin/gulp.js",
+    "watch": "node ./node_modules/gulp/bin/gulp.js watch",
+    "production": "node ./node_modules/gulp/bin/gulp.js production"
   },
   "repository": {
     "type": "git",
@@ -17,9 +19,26 @@
   },
   "homepage": "https://github.com/grama-cc/tia-vera#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-if": "^2.0.0",
+    "gulp-minify-css": "^1.2.3",
     "gulp-sass": "^2.1.1",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1"
+  },
+  "dependencies": {
+    "jquery": "^2.1.4"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-0"
+    ]
   }
 }
